EEVEE Next: Voronoi texture error with point object #115438

Closed
opened 2023-11-26 10:07:12 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-25 22:37, hash: 1b6cd937ffc8
Worked: n/a

Short description of error
In EEVEE Next, voronoi texture on point object leads to error.

eevee_next_point_voronoi.png

Test file: eevee_next_point_voronoi.blend

Other textures render properly on points.

eevee_next_point_magic.png

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-25 22:37, hash: `1b6cd937ffc8` Worked: n/a **Short description of error** In EEVEE Next, voronoi texture on point object leads to error. ![eevee_next_point_voronoi.png](/attachments/92c39ab1-d1b3-407a-b343-39fa66903bd1) Test file: [eevee_next_point_voronoi.blend](/attachments/707c7970-d9d8-42d1-b504-5b21d92feaf5) Other textures render properly on points. ![eevee_next_point_magic.png](/attachments/4ce94076-5400-48fb-a1f4-4584046280d8)
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-26 10:07:13 +01:00
Iliya Katushenock added the
Interest
EEVEE & Viewport
label 2023-11-26 10:08:36 +01:00

Looks like the shader is running into trouble:

ERROR (gpu.shader): GPU_material_compile VertShader:
      |
 9150 |     float pointPosition = cellOffset +
      |
      | gpu_shader_material_voronoi.glsl:140:0: Error: C0000: syntax error, unexpected '.', expecting ',' or ';' at token "."
      |
 9152 |     float distanceToPoint = voronoi_distance(pointPosition, localPosition);
      |
      | gpu_shader_material_voronoi.glsl:142:0: Error: C1031: swizzle mask element not present in operand "position"
      | gpu_shader_material_voronoi.glsl:142:0: Error: C1048: invalid character 'o' in swizzle "position"
      |
 9156 |       targetPosition = pointPosition;
      |
      | gpu_shader_material_voronoi.glsl:146:0: Error: C1031: swizzle mask element not present in operand "position"
      | gpu_shader_material_voronoi.glsl:146:0: Error: C1048: invalid character 'o' in swizzle "position"
Looks like the shader is running into trouble: ``` ERROR (gpu.shader): GPU_material_compile VertShader: | 9150 | float pointPosition = cellOffset + | | gpu_shader_material_voronoi.glsl:140:0: Error: C0000: syntax error, unexpected '.', expecting ',' or ';' at token "." | 9152 | float distanceToPoint = voronoi_distance(pointPosition, localPosition); | | gpu_shader_material_voronoi.glsl:142:0: Error: C1031: swizzle mask element not present in operand "position" | gpu_shader_material_voronoi.glsl:142:0: Error: C1048: invalid character 'o' in swizzle "position" | 9156 | targetPosition = pointPosition; | | gpu_shader_material_voronoi.glsl:146:0: Error: C1031: swizzle mask element not present in operand "position" | gpu_shader_material_voronoi.glsl:146:0: Error: C1048: invalid character 'o' in swizzle "position" ```
Philipp Oeser added the
Interest
EEVEE
label 2024-04-15 14:59:40 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-24 09:39:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115438
No description provided.