Fix: EEVEE-Next: Point cloud macro coliding with voronoi texture

Was caused by macro declaration. Remove the macro
and add another `#if` case for EEVEE-next instead.

Fix #115438