source/blender/gpu/shaders/material/gpu_shader_material_point_info.glsl
@@ -6,7 +6,13 @@
 
 void node_point_info(out vec3 position, out float radius, out float random)
 {
-#ifdef POINTCLOUD_SHADER
+#ifdef MAT_GEOM_POINT_CLOUD
+  /* EEVEE-Next case. */
+  position = point_cloud_interp.position;
+  radius = point_cloud_interp.radius;
+  random = wang_hash_noise(uint(point_cloud_interp_flat.id));
+#elif defined(POINTCLOUD_SHADER)
+  /* EEVEE-Legacy case. */
   position = pointPosition;
   radius = pointRadius;
   random = wang_hash_noise(uint(pointID));
